syntax = "proto3";

package lcm.service.v1;

import "buf/validate/validate.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "lcm/service/v1/client.proto";

// mTLS Certificate Status (for issued certificates)
enum MtlsCertificateStatus {
  MTLS_CERTIFICATE_STATUS_UNSPECIFIED = 0;
  MTLS_CERTIFICATE_STATUS_ACTIVE = 1;
  MTLS_CERTIFICATE_STATUS_EXPIRED = 2;
  MTLS_CERTIFICATE_STATUS_REVOKED = 3;
  MTLS_CERTIFICATE_STATUS_SUSPENDED = 4;
}

// mTLS Certificate Revocation Reason (RFC 5280)
enum MtlsCertificateRevocationReason {
  MTLS_CERT_REVOCATION_REASON_UNSPECIFIED = 0;
  MTLS_CERT_REVOCATION_REASON_KEY_COMPROMISE = 1;
  MTLS_CERT_REVOCATION_REASON_CA_COMPROMISE = 2;
  MTLS_CERT_REVOCATION_REASON_AFFILIATION_CHANGED = 3;
  MTLS_CERT_REVOCATION_REASON_SUPERSEDED = 4;
  MTLS_CERT_REVOCATION_REASON_CESSATION_OF_OPERATION = 5;
  MTLS_CERT_REVOCATION_REASON_CERTIFICATE_HOLD = 6;
  MTLS_CERT_REVOCATION_REASON_PRIVILEGE_WITHDRAWN = 7;
  MTLS_CERT_REVOCATION_REASON_AA_COMPROMISE = 8;
}

// MtlsCertificate entity - represents an issued mTLS certificate
message MtlsCertificate {
  optional int64 serial_number = 1 [json_name = "serialNumber"]; // Unique serial number (bigint)
  optional string client_id = 2 [json_name = "clientId"]; // Owner client ID
  optional string common_name = 3 [json_name = "commonName"]; // Subject CN
  optional uint32 tenant_id = 80 [json_name = "tenantId"]; // Tenant ID
  optional string subject_dn = 4 [json_name = "subjectDn"]; // Full subject distinguished name
  optional string issuer_dn = 5 [json_name = "issuerDn"]; // Issuer distinguished name
  optional string issuer_name = 6 [json_name = "issuerName"]; // Issuer name/identifier
  optional string fingerprint_sha256 = 7 [json_name = "fingerprintSha256"]; // SHA-256 fingerprint
  optional string fingerprint_sha1 = 8 [json_name = "fingerprintSha1"]; // SHA-1 fingerprint (for compatibility)
  optional string public_key_algorithm = 9 [json_name = "publicKeyAlgorithm"]; // e.g., RSA, ECDSA
  optional int32 public_key_size = 10 [json_name = "publicKeySize"]; // Key size in bits
  optional string signature_algorithm = 11 [json_name = "signatureAlgorithm"]; // e.g., SHA256WithRSA
  optional string certificate_pem = 12 [json_name = "certificatePem"]; // PEM-encoded certificate
  optional string public_key_pem = 13 [json_name = "publicKeyPem"]; // PEM-encoded public key
  repeated string dns_names = 14 [json_name = "dnsNames"]; // Subject Alternative Names - DNS
  repeated string ip_addresses = 15 [json_name = "ipAddresses"]; // Subject Alternative Names - IPs
  repeated string email_addresses = 16 [json_name = "emailAddresses"]; // Subject Alternative Names - Email
  repeated string uris = 17 [json_name = "uris"]; // Subject Alternative Names - URIs
  optional MtlsCertificateType cert_type = 18 [json_name = "certType"];
  optional MtlsCertificateStatus status = 19 [json_name = "status"];
  optional bool is_ca = 20 [json_name = "isCa"]; // Is this a CA certificate
  optional int32 path_len_constraint = 21 [json_name = "pathLenConstraint"]; // CA path length constraint
  repeated string key_usage = 22 [json_name = "keyUsage"]; // Key usage extensions
  repeated string ext_key_usage = 23 [json_name = "extKeyUsage"]; // Extended key usage
  map<string, string> metadata = 24 [json_name = "metadata"]; // Custom metadata
  optional string notes = 25 [json_name = "notes"]; // Admin notes
  optional uint32 request_id = 26 [json_name = "requestId"]; // Link to certificate request

  // Revocation info
  optional MtlsCertificateRevocationReason revocation_reason = 50 [json_name = "revocationReason"];
  optional string revocation_notes = 51 [json_name = "revocationNotes"];

  // Audit fields
  optional uint32 issued_by = 100 [json_name = "issuedBy"];
  optional uint32 revoked_by = 101 [json_name = "revokedBy"];
  optional uint32 created_by = 102 [json_name = "createdBy"];
  optional uint32 updated_by = 103 [json_name = "updatedBy"];

  // Timestamps
  optional google.protobuf.Timestamp not_before = 200 [json_name = "notBefore"]; // Certificate validity start
  optional google.protobuf.Timestamp not_after = 201 [json_name = "notAfter"]; // Certificate validity end
  optional google.protobuf.Timestamp issued_at = 202 [json_name = "issuedAt"];
  optional google.protobuf.Timestamp revoked_at = 203 [json_name = "revokedAt"];
  optional google.protobuf.Timestamp last_seen_at = 204 [json_name = "lastSeenAt"]; // Last time certificate was used
  optional google.protobuf.Timestamp create_time = 205 [json_name = "createTime"];
  optional google.protobuf.Timestamp update_time = 206 [json_name = "updateTime"];
  optional google.protobuf.Timestamp delete_time = 207 [json_name = "deleteTime"];
}

// List mTLS Certificates
message ListMtlsCertificatesRequest {
  optional MtlsCertificateStatus status = 1 [json_name = "status"]; // Filter by status
  optional string client_id = 2 [json_name = "clientId"]; // Filter by client
  optional string issuer_name = 3 [json_name = "issuerName"]; // Filter by issuer
  optional string common_name = 4 [json_name = "commonName"]; // Filter by CN (partial match)
  optional bool include_expired = 5 [json_name = "includeExpired"]; // Include expired certificates
  optional bool include_revoked = 6 [json_name = "includeRevoked"]; // Include revoked certificates
  optional uint32 tenant_id = 7 [json_name = "tenantId"]; // Filter by tenant
  optional uint32 page = 10 [json_name = "page"];
  optional uint32 page_size = 11 [json_name = "pageSize"];
  optional google.protobuf.FieldMask view_mask = 100 [json_name = "viewMask"];
}

message ListMtlsCertificatesResponse {
  repeated MtlsCertificate items = 1 [json_name = "items"];
  uint64 total = 2 [json_name = "total"];
}

// Get mTLS Certificate
message GetMtlsCertificateRequest {
  oneof query_by {
    int64 serial_number = 1 [json_name = "serialNumber"];
    string fingerprint_sha256 = 2 [json_name = "fingerprintSha256"];
    string common_name = 3 [json_name = "commonName"];
  }
  optional google.protobuf.FieldMask view_mask = 100 [json_name = "viewMask"];
}

message GetMtlsCertificateResponse {
  MtlsCertificate mtls_certificate = 1 [json_name = "mtlsCertificate"];
}

// Issue mTLS Certificate (create new certificate directly, bypassing request flow)
message IssueMtlsCertificateRequest {
  string client_id = 1 [
    json_name = "clientId",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 64
      pattern: "^[a-zA-Z0-9][a-zA-Z0-9_-]*$"
    }
  ];
  string common_name = 2 [
    json_name = "commonName",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 253
      pattern: "^[a-zA-Z0-9][a-zA-Z0-9\\-\\.]*$"
    }
  ];
  optional string csr_pem = 3 [
    json_name = "csrPem",
    (buf.validate.field).string = {
      max_len: 16384
      pattern: "^-----BEGIN CERTIFICATE REQUEST-----[\\s\\S]*-----END CERTIFICATE REQUEST-----[\\s]*$"
    }
  ];
  optional string public_key_pem = 4 [
    json_name = "publicKeyPem",
    (buf.validate.field).string = {
      max_len: 8192
      pattern: "^-----BEGIN PUBLIC KEY-----[\\s\\S]*-----END PUBLIC KEY-----[\\s]*$"
    }
  ];
  repeated string dns_names = 5 [
    json_name = "dnsNames",
    (buf.validate.field).repeated = {
      max_items: 100
      items: {
        string: {
          min_len: 1
          max_len: 253
          pattern: "^[a-zA-Z0-9*]([a-zA-Z0-9\\-*]{0,61}[a-zA-Z0-9*])?(\\.[a-zA-Z0-9*]([a-zA-Z0-9\\-*]{0,61}[a-zA-Z0-9*])?)*$"
        }
      }
    }
  ];
  repeated string ip_addresses = 6 [
    json_name = "ipAddresses",
    (buf.validate.field).repeated = {
      max_items: 50
      items: {
        string: {ip: true}
      }
    }
  ];
  optional string issuer_name = 7 [
    json_name = "issuerName",
    (buf.validate.field).string = {
      max_len: 100
      pattern: "^[a-zA-Z0-9\\-_]*$"
    }
  ];
  optional MtlsCertificateType cert_type = 8 [json_name = "certType"];
  optional int32 validity_days = 9 [
    json_name = "validityDays",
    (buf.validate.field).int32 = {
      gte: 1
      lte: 825
    }
  ];
  map<string, string> metadata = 10 [
    json_name = "metadata",
    (buf.validate.field).map = {
      max_pairs: 50
      keys: {
        string: {
          min_len: 1
          max_len: 64
          pattern: "^[a-zA-Z][a-zA-Z0-9_]*$"
        }
      }
      values: {
        string: {max_len: 512}
      }
    }
  ];
  optional string notes = 11 [
    json_name = "notes",
    (buf.validate.field).string = {max_len: 2048}
  ];
}

message IssueMtlsCertificateResponse {
  MtlsCertificate mtls_certificate = 1 [json_name = "mtlsCertificate"];
  optional string ca_certificate_pem = 2 [json_name = "caCertificatePem"]; // CA cert for chain building
}

// Update mTLS Certificate (metadata, notes only - cert content is immutable)
message UpdateMtlsCertificateRequest {
  int64 serial_number = 1 [
    json_name = "serialNumber",
    (google.api.field_behavior) = REQUIRED
  ];
  map<string, string> metadata = 2 [
    json_name = "metadata",
    (buf.validate.field).map = {
      max_pairs: 50
      keys: {
        string: {
          min_len: 1
          max_len: 64
          pattern: "^[a-zA-Z][a-zA-Z0-9_]*$"
        }
      }
      values: {
        string: {max_len: 512}
      }
    }
  ];
  optional string notes = 3 [
    json_name = "notes",
    (buf.validate.field).string = {max_len: 2048}
  ];
  google.protobuf.FieldMask update_mask = 100 [json_name = "updateMask"];
}

message UpdateMtlsCertificateResponse {
  MtlsCertificate mtls_certificate = 1 [json_name = "mtlsCertificate"];
}

// Revoke mTLS Certificate
message RevokeMtlsCertificateRequest {
  int64 serial_number = 1 [
    json_name = "serialNumber",
    (google.api.field_behavior) = REQUIRED
  ];
  MtlsCertificateRevocationReason reason = 2 [
    json_name = "reason",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).enum = {defined_only: true}
  ];
  optional string notes = 3 [
    json_name = "notes",
    (buf.validate.field).string = {max_len: 2048}
  ];
}

message RevokeMtlsCertificateResponse {
  MtlsCertificate mtls_certificate = 1 [json_name = "mtlsCertificate"];
}

// Renew mTLS Certificate (issue new cert with same attributes)
message RenewMtlsCertificateRequest {
  int64 serial_number = 1 [
    json_name = "serialNumber",
    (google.api.field_behavior) = REQUIRED
  ];
  optional string public_key_pem = 2 [
    json_name = "publicKeyPem",
    (buf.validate.field).string = {
      max_len: 8192
      pattern: "^-----BEGIN PUBLIC KEY-----[\\s\\S]*-----END PUBLIC KEY-----[\\s]*$"
    }
  ]; // New public key (optional, reuse existing if not provided)
  optional int32 validity_days = 3 [
    json_name = "validityDays",
    (buf.validate.field).int32 = {
      gte: 1
      lte: 825
    }
  ];
  optional bool revoke_old = 4 [json_name = "revokeOld"]; // Revoke the old certificate
}

message RenewMtlsCertificateResponse {
  MtlsCertificate mtls_certificate = 1 [json_name = "mtlsCertificate"]; // The new certificate
  MtlsCertificate old_mtls_certificate = 2 [json_name = "oldMtlsCertificate"]; // The old certificate (may be revoked)
}

// Delete mTLS Certificate (soft delete)
message DeleteMtlsCertificateRequest {
  int64 serial_number = 1 [
    json_name = "serialNumber",
    (google.api.field_behavior) = REQUIRED
  ];
}

message DeleteMtlsCertificateResponse {
  MtlsCertificate mtls_certificate = 1 [json_name = "mtlsCertificate"];
}

// Download mTLS Certificate (get PEM bundle)
message DownloadMtlsCertificateRequest {
  int64 serial_number = 1 [
    json_name = "serialNumber",
    (google.api.field_behavior) = REQUIRED
  ];
  optional bool include_chain = 2 [json_name = "includeChain"]; // Include full certificate chain
}

message DownloadMtlsCertificateResponse {
  string certificate_pem = 1 [json_name = "certificatePem"];
  optional string chain_pem = 2 [json_name = "chainPem"]; // Full chain if requested
  optional string ca_certificate_pem = 3 [json_name = "caCertificatePem"];
}

// mTLS Certificate Admin Service
service LcmMtlsCertificateService {
  // mTLS Certificate Management (admin only)
  rpc ListMtlsCertificates(ListMtlsCertificatesRequest) returns (ListMtlsCertificatesResponse) {}
  rpc GetMtlsCertificate(GetMtlsCertificateRequest) returns (GetMtlsCertificateResponse) {}
  rpc IssueMtlsCertificate(IssueMtlsCertificateRequest) returns (IssueMtlsCertificateResponse) {}
  rpc UpdateMtlsCertificate(UpdateMtlsCertificateRequest) returns (UpdateMtlsCertificateResponse) {}
  rpc RevokeMtlsCertificate(RevokeMtlsCertificateRequest) returns (RevokeMtlsCertificateResponse) {}
  rpc RenewMtlsCertificate(RenewMtlsCertificateRequest) returns (RenewMtlsCertificateResponse) {}
  rpc DeleteMtlsCertificate(DeleteMtlsCertificateRequest) returns (DeleteMtlsCertificateResponse) {}
  rpc DownloadMtlsCertificate(DownloadMtlsCertificateRequest) returns (DownloadMtlsCertificateResponse) {}
}
